[metadata]
name = xonox
version = 0.0.4
author = TillW
description = An alternative service for legacy NOXON(tm) devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/x789/xonox
project_urls =
    Bug Tracker = https://github.com/x789/xonox/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    flask

[options.packages.find]
where = src