[metadata]
name = xonox
version = 1.0.0
author = TillW
description = An alternative infrastructure-service for legacy NOXON(tm) devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/x789/xonox
project_urls =
    Bug Tracker = https://github.com/x789/xonox/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    flask==3.0.0
    Werkzeug==3.0.1

[options.packages.find]
where = src